k8s/base/plantsuite/gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  template:
    spec:
      containers:
        - name: gateway
          image: plantsuite.azurecr.io/gateway-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 3
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 30
          volumeMounts:
            - name: appsettings
              readOnly: true
              mountPath: /app/appsettings.json
              subPath: appsettings.json
            - name: data
              mountPath: /app/data
            - name: license
              readOnly: true
              mountPath: /etc/plantsuite
            - name: ca-certificates
              mountPath: /etc/ssl/certs/ca-certificates.crt
              subPath: ca.crt
              readOnly: true
            - name: opc-ua-certs
              mountPath: /app/OPC Foundation
        - name: gateway-ui
          image: plantsuite.azurecr.io/plantsuite-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-ui
              containerPort: 8081
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 32Mi
          livenessProbe:
            httpGet:
              path: /
              port: http-ui
              scheme: HTTP
            timeoutSeconds: 3
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http-ui
              scheme: HTTP
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /
              port: http-ui
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 3
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 12
      volumes:
        - name: appsettings
          configMap:
            name: gateway-appsettings
            items:
              - key: appsettings.json
                path: appsettings.json
        - name: data
          persistentVolumeClaim:
            claimName: gateway-data
        - name: license
          secret:
            secretName: plantsuite-license
            items:
              - key: license.crt
                path: license.crt
        - name: ca-certificates
          secret:
            secretName: ca-certificates
            items:
              - key: ca.crt
                path: ca.crt
        - name: opc-ua-certs
          emptyDir: {}
      imagePullSecrets:
        - name: plantsuite-cr
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
