k8s/base/plantsuite/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: http-ui
      protocol: TCP
      port: 8080
      targetPort: http-ui
