k8s/base/plantsuite/gateway/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: gateway
spec:
  hosts:
    - gateway.plantsuite.local
  gateways:
    - istio-ingress/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: gateway
            port:
              number: 80
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: gateway-ui
spec:
  hosts:
    - gateway-ui.plantsuite.local
  gateways:
    - istio-ingress/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: gateway
            port:
              number: 8080
